--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 .boolean { color: #2aa198; }
 .null { color: #cb4b16; }
 .key { color: #b58900; }
-.logo { margin: auto ; display: block; height: 30vh; }
+.logo { margin: auto ; display: block; max-height: 30vh; }
 body { max-width: 1000px;}
 
 
